Add integrated simulator and prediction features
- Added SimulatorControl component for ASL letter simulation
- Integrated synthetic ASL simulator with auto-stop toggle
- Added real-time gesture prediction using rule-based approach
- Bundle Python scripts with release build
- Hide Python console windows on Windows
- Added buffer management and clearing functionality
- Updated UI for multi-language support (EN/TR)
- Removed emojis and simplified UI
- Added demo guides and quick reference

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,13 +14,58 @@
         "speak_en": "Speak (English)",
         "connect": "Connect",
         "disconnect": "Disconnect",
-        "scan": "Scan"
+        "scan": "Scan",
+        "stop": "Stop",
+        "kill_all": "Kill All",
+        "predict": "Predict Current Gesture",
+        "analyzing": "Analyzing...",
+        "clear": "Clear",
+        "start_recording": "Start Recording",
+        "stop_recording": "Stop Recording",
+        "save": "Save Recording",
+        "calibrate": "Calibrate",
+        "debug": "Debug"
     },
     "connection": {
         "title": "Device Connection",
         "connected": "Connected",
         "disconnected": "Disconnected",
         "no_ports": "No ports found"
+    },
+    "simulator": {
+        "title": "Simulator & Prediction",
+        "auto_stop": "Auto-Stop at 200 Samples",
+        "auto_stop_on": "Simulator will stop automatically when buffer is full (for prediction)",
+        "auto_stop_off": "Simulator runs continuously (for data recording)",
+        "status": "Simulator Status",
+        "running": "Running: ASL",
+        "stopped": "Stopped",
+        "select_letter": "Select ASL Letter to Simulate:",
+        "buffer": "Buffer",
+        "samples": "samples",
+        "need_more": "need more",
+        "collecting": "collecting more...",
+        "full": "full, auto-stopped",
+        "continuous": "recording continuously",
+        "latest_sample": "Latest sample (of",
+        "prediction_result": "Prediction Result:",
+        "asl_letter": "ASL Letter:",
+        "confidence": "Confidence:",
+        "analyzed": "Analyzed"
+    },
+    "recorder": {
+        "title": "Data Recorder",
+        "subtitle": "Record sensor data for training",
+        "user_id": "User ID",
+        "session_id": "Session ID",
+        "gesture": "Gesture",
+        "select_gesture": "Select gesture",
+        "recording": "Recording...",
+        "samples_collected": "samples collected",
+        "saved_success": "Recording saved successfully!",
+        "calibration": "Calibration",
+        "straight_fingers": "Straight Fingers (Baseline)",
+        "fist": "Fist (Max Bend)"
     },
     "settings": {
         "theme": "Theme",
