--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -14,13 +14,58 @@
         "speak_en": "Konuş (İngilizce)",
         "connect": "Bağlan",
         "disconnect": "Bağlantıyı Kes",
-        "scan": "Tara"
+        "scan": "Tara",
+        "stop": "Durdur",
+        "kill_all": "Hepsini Sonlandır",
+        "predict": "Mevcut İşareti Tahmin Et",
+        "analyzing": "Analiz ediliyor...",
+        "clear": "Temizle",
+        "start_recording": "Kaydı Başlat",
+        "stop_recording": "Kaydı Durdur",
+        "save": "Kaydı Kaydet",
+        "calibrate": "Kalibrasyon Yap",
+        "debug": "Hata Ayıklama"
     },
     "connection": {
         "title": "Cihaz Bağlantısı",
         "connected": "Bağlı",
         "disconnected": "Bağlantı Yok",
         "no_ports": "Port bulunamadı"
+    },
+    "simulator": {
+        "title": "Simülatör & Tahmin",
+        "auto_stop": "200 Örnekte Otomatik Durdur",
+        "auto_stop_on": "Simülatör, tampon dolduğunda otomatik olarak duracak (tahmin için)",
+        "auto_stop_off": "Simülatör sürekli çalışır (veri kaydı için)",
+        "status": "Simülatör Durumu",
+        "running": "Çalışıyor: ASL",
+        "stopped": "Durduruldu",
+        "select_letter": "Simüle edilecek ASL Harfini Seçin:",
+        "buffer": "Tampon",
+        "samples": "örnek",
+        "need_more": "daha gerekli",
+        "collecting": "daha fazlası toplanıyor...",
+        "full": "dolu, otomatik durduruldu",
+        "continuous": "sürekli kaydediliyor",
+        "latest_sample": "Son örnek (toplam",
+        "prediction_result": "Tahmin Sonucu:",
+        "asl_letter": "ASL Harfi:",
+        "confidence": "Güven:",
+        "analyzed": "Analiz edildi"
+    },
+    "recorder": {
+        "title": "Veri Kaydedici",
+        "subtitle": "Eğitim için sensör verisi kaydedin",
+        "user_id": "Kullanıcı ID",
+        "session_id": "Oturum ID",
+        "gesture": "İşaret",
+        "select_gesture": "İşaret seçin",
+        "recording": "Kaydediliyor...",
+        "samples_collected": "örnek toplandı",
+        "saved_success": "Kayıt başarıyla kaydedildi!",
+        "calibration": "Kalibrasyon",
+        "straight_fingers": "Düz Parmaklar (Temel Çizgi)",
+        "fist": "Yumruk (Maksimum Bükülme)"
     },
     "settings": {
         "theme": "Tema",
